nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx

spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: nginx
    task: nginx
